--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,13 +14,59 @@ header{
     color: #fff;
 }
 
-/* section{
-    padding: 100px 0;
-} */
+section{
+    padding: 50px 0;
+}
 
 /* Hero section */
 
 .hero-section{
     height: 100vh;
     padding: 150px 0;
+}
+
+/* Roadmap */
+
+.roadmap{
+    background: url(../img/roadmap.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    position: relative;
+}
+
+.point{
+    display: flex;
+}
+
+/* .point-title{
+
+}
+
+.point-desc{
+    width: 50%;
+} */
+
+.point-1{
+    position: absolute;
+    top: 100px;
+    left: 550px;
+}
+
+.point-2{
+    position: absolute;
+    top: 250px;
+    left: 750px;
+}
+
+.point-3{
+    position: absolute;
+    top: 400px;
+    left: 300px;
+}
+
+.point-4{
+    position: absolute;
+    top: 570px;
+    left: 650px;
 }
