--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,11 @@ section {
 
 .mark-btn {
     border-radius: 10px;
-    width: 80%;
+    width: 70%;
+    font-size: 25px !important;
+    color: #fff;
+    font-weight: 500;
+    text-align: left;
 }
 
 .hero-section {
@@ -197,7 +201,7 @@ section {
     background: url(../img/roadmap.svg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 120vh;
     position: relative;
 }
 
@@ -216,7 +220,7 @@ section {
 .point-1 {
     position: absolute;
     top: 100px;
-    left: 550px;
+    left: 36%;
 }
 
 .point-2 {
@@ -228,13 +232,13 @@ section {
 .point-3 {
     position: absolute;
     top: 400px;
-    left: 300px;
+    left: 200px;
 }
 
 .point-4 {
     position: absolute;
     top: 570px;
-    left: 650px;
+    left: 450px;
 }
 
 /* tokenomics*/
