--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,7 @@ section {
 .cardd {
     position: relative;
     width: 90%;
+    height: 100%;
     padding: 1em 1.5em;
     margin: 2em auto;
     color: #000;
@@ -159,11 +160,12 @@ section {
 
 .cardd-desc {
     font-family: Montserrat;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
     line-height: 27px;
     letter-spacing: 0em;
     text-align: left;
+    margin: 0;
 }
 
 /* playnow*/
@@ -188,7 +190,7 @@ section {
     letter-spacing: 0em;
     text-align: left;
     color: #fff;
-    width: 50%;
+    width: 80%;
 
 }
 
