--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,31 @@ header {
     background-repeat: no-repeat;
 }
 
+.navbar {
+    z-index: 99;
+}
+
+.navbar li a {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    color: #fff;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.navbar li a:hover {
+    color: #d3d3d3;
+    text-decoration: none;
+}
+
+.contact-btn {
+    padding: 0.5rem 2rem;
+    background: #030C16;
+    color: #15F5FF;
+    border: 1.5px solid #15F5FF;
+    border-radius: 121px;
+}
+
 .navbar li a {
     font-family: 'Montserrat', 'sans-serif';
     font-size: 20px;
@@ -289,6 +314,19 @@ section {
 }
 
 @media only screen and (max-width: 667px) {
+
+    .nav-item {
+        margin: 10px 0 10px -10px;
+    }
+
+    .sec-head{
+        font-size: 50px;
+    }
+
+    .card-head{
+        font-size: 50px;
+    }
+
     .hero-section {
         height: unset
     }
