--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,48 +232,43 @@ section {
 /* Roadmap */
 
 .roadmap {
-    /* background: url(../img/roadmap.svg);
-    background-size: cover;
-    background-repeat: no-repeat; */
-    /* height: 120vh;
-    position: relative; */
     padding: 0;
 }
 
-.point {
-    display: flex;
+.road-head {
+    margin-top: 50px;
+    color: rgba(96, 1, 82, 0.8) !important;
 }
 
-/* .point-title{
-
+.roadmap-item {
+    padding: 1rem 0;
 }
 
-.point-desc{
-    width: 50%;
-} */
-
-.point-1 {
-    position: absolute;
-    top: 100px;
-    left: 36%;
+.roadmap-item-number {
+    height: 60px;
+    color: #fff;
+    width: 60px;
+    background: #FEC700;
+    border-radius: 50%;
+    font-size: 30px;
+    font-weight: 800;
+    font-family: Tricky;
 }
 
-.point-2 {
-    position: absolute;
-    top: 250px;
-    left: 750px;
+.roadmap-item>ul {
+    list-style-type: square;
 }
 
-.point-3 {
-    position: absolute;
-    top: 400px;
-    left: 200px;
+.roadmap-item>ul li {
+    font-size: 18px;
+    font-family: Montserrat;
 }
 
-.point-4 {
-    position: absolute;
-    top: 570px;
-    left: 450px;
+.roadmap-item-heading {
+    font-size: 25px;
+    margin: 10px 0;
+    color: #FEC700;
+    font-family: Tricky;
 }
 
 /* tokenomics*/
@@ -314,19 +309,19 @@ section {
 }
 
 @media only screen and (max-width: 667px) {
-    .boy-img{
+    .boy-img {
         margin-top: -70px;
     }
 
-    .top-head{
+    .top-head {
         font-size: 25px;
     }
 
-    .top-desc{
+    .top-desc {
         font-size: 18px;
     }
 
-    .mark-btn{
+    .mark-btn {
         font-size: 18px !important;
     }
 
@@ -334,16 +329,16 @@ section {
         width: 100%;
     }
 
-    .card-head{
+    .card-head {
         font-size: 30px;
         line-height: 33px;
     }
 
-    .cardd-heading{
+    .cardd-heading {
         font-size: 25px;
     }
 
-    .cardd-desc{
+    .cardd-desc {
         font-size: 15px !important;
     }
 
@@ -351,8 +346,8 @@ section {
         margin: 10px 0 10px -10px;
     }
 
-    .sec-head{
-        font-size: 30px;
+    .sec-head {
+        font-size: 40px;
         text-align: center;
     }
 
@@ -361,11 +356,11 @@ section {
         font-size: 15px;
     }
 
-    .totalSupply{
+    .totalSupply {
         font-size: 25px;
     }
 
-    .tokenAmount{
+    .tokenAmount {
         font-size: 25px;
     }
 
@@ -381,7 +376,15 @@ section {
         display: none !important;
     }
 
-    .wavey-img{
+    .wavey-img {
         height: 100%;
+    }
+
+    .roadmap {
+        position: relative;
+    }
+
+    .roadmap-img {
+        display: none;
     }
 }
