--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,6 +308,51 @@ section {
     width: 100%;
 }
 
+.slide {
+    width: 100vw;
+    height: 100vh;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: row;
+    width: 400vw;
+    transform: rotate(90deg) translateY(-100vh);
+    transform-origin: top left;
+}
+
+.outer-wrapper {
+    width: 100vh;
+    height: 100vw;
+    transform: rotate(-90deg) translateX(-100vh);
+    transform-origin: top left;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    position: absolute;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+.one {
+    background: #efdefe;
+}
+
+.two {
+    background: #a3f3d3;
+}
+
+.three {
+    background: #0bbaa0;
+}
+
+.four {
+    background: #00dfdf;
+}
+
 @media only screen and (max-width: 667px) {
     .boy-img {
         margin-top: -70px;
