--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,54 +308,105 @@ section {
     width: 100%;
 }
 
-/* */
-
-.main-wrapper {
-    width: 100vw;
-    height: 100vh;
-    overflow: auto;
+section.horizontal {
+    overflow-x: hidden;
   }
   
-  .section {
-    float: left;
-    height: 100vh;
-    width: 100vw;
-    text-align: center;
+  .principles{
+      padding: 60px 20px 120px;
+  }
+  
+  .principles__container{
+      margin: 0 auto;
+      width: 100%;
+      position: relative;
+  }
+  .principles__title{
+      font-family: 'Montserrat', sans-serif;
+      font-weight: bold;
+      font-size: 42px;
+      line-height: 54px;
+      color: #1C2F6B;
+      margin-bottom: 32px;
+  }
+  
+  .principles__counter{
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 36px;
+    color: #30C5FF;
+  }
+  
+  .principles__list{
     display: flex;
-    align-items: center;
   }
-  .section:first-child {
-    background-color: lightblue;
+  
+  .principles__item{
+    background-color: #F5F9FF;
+    min-width: 370px;
+    padding: 32px;
+    margin-left: 30px;
+    transition: .5s all ease;
+    cursor: pointer;
+    height: 290px;
+    box-sizing: border-box;
   }
-  .section:nth-child(2) {
-    background-color: lightyellow;
+  
+  .principles__item:first-of-type{
+    margin-left: 0;
   }
-  .section:nth-child(3) {
-    background-color: lightpink;
-    width: 50vw;
-  }
-  .section:nth-child(4) {
-    background-color: lightgreen;
-  }
-  .section:nth-child(5) {
-    background-color: lightgrey;
-  }
-  .sections {
-    white-space: nowrap;
-    min-width: 100vw;
-    height: 100vh;
-  }
-  .section__title, .section__heading {
+  
+  .principles__item:after {
+    display: block;
     width: 100%;
+    height: 100%;
+    content: "";
+    background-color: #1C2F6B;
+    position: absolute;
+    left: 0;
+    top: 0;
+    -webkit-transform-origin: 50% 100%;
+    transform-origin: 50% 100%;
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+    -webkit-transition: -webkit-transform .3s;
+    transition: -webkit-transform .3s;
+    transition: transform .3s;
+    transition: transform .3s,-webkit-transform .3s;
+    z-index: -1;
   }
-  .section__heading p {
-    text-transform: uppercase;
-    font-size: 11px;
-    max-width: 160px;
-    margin: 0 auto;
-    display: inline-block;
-    white-space: normal;
+  
+  .principles__item.active:after {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
   }
+  
+  .principles__item:hover{
+    background-color: #1C2F6B;
+  }
+  .principles__item:hover .principles__description,
+  .principles__item.active .principles__description{
+    color: #fff;
+  }
+  .principles__number{
+    color: #30C5FF;
+    margin-bottom: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+  }
+  .principles__description{
+    color: #1C2F6B;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    transition: .5s all ease;
+  }
+  
 
 @media only screen and (max-width: 667px) {
     .boy-img {
@@ -375,7 +426,7 @@ section {
     }
 
     .cardd {
-        width: 100%;
+        width: 100% !important;
     }
 
     .card-head {
