--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,11 +135,11 @@ section {
     color: #fff;
     font-weight: 500;
     text-align: left;
+    font-family: Montserrat !important;
 }
 
 .hero-section {
-    height: 100vh;
-    padding: 150px 0;
+    padding: 100px 0;
 }
 
 .hero-main {
