--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,15 +364,46 @@ html, body, section.horizontal {
     width: 250px;
 }
 
-@media only screen and (max-width: 667px) {
+@media only screen and (max-width: 997px) {
 
     .navbar li a{
-        font-size: 15px;
+        font-size: 12px;
     }
 
     .buy-btn{
         width: 98%;
         margin-left: 15px
+    }
+
+    .hero-main {
+        width: 100%;
+    }
+
+    .img-sec {
+        display: none !important;
+    }
+
+    .sec-head {
+        font-size: 40px;
+    }
+
+    .play-btn{
+        width: 150px
+    }
+
+    .totalSupply{
+        font-size: 25px;
+    }
+
+    .tokenAmount{
+        font-size: 20px;
+    }
+}
+
+@media only screen and (max-width: 667px) {
+
+    .navbar li a{
+        font-size: 15px;
     }
 
     .play-btn{
@@ -440,14 +471,6 @@ html, body, section.horizontal {
 
     .hero-section {
         height: unset
-    }
-
-    .hero-main {
-        width: 100%;
-    }
-
-    .img-sec {
-        display: none !important;
     }
 
     .wavey-img {
