--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,8 +282,16 @@ section {
 
 
 .toke-item {
-    margin-top: 50px;
+    margin-top: 20px;
 }
+
+.tokeDot {
+    height: 25px;
+    width: 25px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+  }
 
 .totalSupply {
     font-family: Tricky;
@@ -295,14 +303,23 @@ section {
     color: #FEC700;
 }
 
+.tokeDesc {
+    font-family: Tricky;
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FEC700;
+}
+
 .tokenAmount {
     font-family: 'Montserrat', sans-serif;
-    font-size: 32px;
-    font-weight: 600;
+    font-size: 23px;
+    font-weight: 300;
     line-height: 23px;
     letter-spacing: 0em;
     text-align: left;
-    color: #fff;
+    color: #eee;
 }
 
 .wavey-img {
